[package]
name = "bevy_roguelike_fork"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = "1.0.117"
adam_fov_rs = "0.4.0"
sark_grids = "0.6.2"
bevy_ascii_terminal = "0.17.0"
bevy = "0.16.1"
rand = "0.9.2"
bracket-random = "0.8.7"
interpolation = "0.3.0"
ron = "0.11.0"
sark_pathfinding = "0.4.0"

[profile.release]
opt-level = 's'
lto = true
